--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/ShittyMobaWebGL.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body>
+  <body style="background-color: black;">
     <div class="webgl-content">
       <div id="gameContainer" style="width: 1280px; height: 720px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">ShittyMoba</div>
-      </div>
     </div>
   </body>
 </html>
